# p-tfhe

./: .gitignore  CMakeLists.txt  abstract.txt  main.cpp
include/: common.hpp  domain_expansion.hpp  generator.hpp  tgsw.hpp  tlwe.hpp
src/: CMakeLists.txt  common.cpp  domain_expansion.cpp  generator.cpp  tgsw.cpp  tlwe.cpp
tests/: CMakeLists.txt
tests/include/: additions.hpp  decode.hpp  errors.hpp  logger.hpp  random.hpp  utils.hpp
tests/src/: CMakeLists.txt  additions.cpp  decode.cpp  errors.cpp  logger.cpp  main.cpp  random.cpp  utils.cpp
